# snipts

./: .dockerignore  .gitignore  .huskrc.js  .prettierrc.json  README.md  docker-compose-dev.yml  eslintrc.base.js  install_packages.sh  lint-staged.config.js  package.json  tsconfig.base.json
affaj/: ChangeLog.md  Makefile  README.md  affaj.cabal  config.toml
affaj/sql/: schema.sql  seed.sql
affaj/src/: Lib.hs  Prelude.hs
affaj/src/Lib/: Server.hs  Time.hs
affaj/src/Lib/App/: Env.hs  Error.hs  Monad.hs
affaj/src/Lib/Core/: Admin.hs  Email.hs  Id.hs  Jwt.hs  Password.hs  Snippet.hs  SnippetContent.hs  SnippetDescription.hs  SnippetTitle.hs  User.hs
affaj/src/Lib/Db/: Functions.hs  Schema.hs  Snippet.hs  User.hs
affaj/src/Lib/Effects/: Jwt.hs  Log.hs  Measure.hs  Session.hs
affaj/src/Lib/Server/: Auth.hs  Types.hs
affaj/test/: Spec.hs
apps/.metals/: metals.h2.db
apps/api/: .env.development  package-lock.json  package.json  tsconfig.json
apps/api/src/features/auth/: authMiddleware.ts  authRoutes.ts  loginService.ts  registerService.ts  user.ts  userRepo.ts  userService.ts
apps/api/src/features/snippet/: db.test.ts  snippet.ts  snippetRepo.ts  snippetRouter.ts  snippetService.ts
apps/api/src/infrastructure/: bcrypt.ts  db.ts  env.ts  error.ts  jwt.ts
apps/auth-api/: jest.config.js  operators.ts  package.json
apps/auth-api/sql/: 001_init.sql
apps/auth-api/src/: app.ts  index.ts
apps/auth-api/src/features/auth/: userRepo.ts  userService.ts
apps/auth-api/src/features/snippet/: db.test.ts  snippetService.ts
apps/auth-api/src/infrastructure/: db.ts  logger.ts
apps/client/: package.json  spago.dhall
apps/scala-server/: .gitignore  .mergify.yml  build.sbt  docker-compose.yml  reqs.http
apps/scala-server/.bsp/: sbt.json
apps/scala-server/app/: docker-compose.yml
apps/scala-server/modules/core/src/main/resources/: tables.sql
apps/scala-server/modules/core/src/main/scala/api/: Main.scala
apps/scala-server/modules/core/src/main/scala/api/auth/: Crypto.scala  JwtExpire.scala  Tokens.scala
apps/scala-server/modules/core/src/main/scala/api/config/: AppEnvironment.scala  Config.scala  types.scala
apps/scala-server/modules/core/src/main/scala/api/domain/: auth.scala  category.scala  healthcheck.scala  id.scala  language.scala  link.scala  package.scala  snippet.scala
apps/scala-server/modules/core/src/main/scala/api/effects/: Background.scala  GenUUID.scala  JwtClock.scala
apps/scala-server/modules/core/src/main/scala/api/ext/: refined.scala
apps/scala-server/modules/core/src/main/scala/api/http/: vars.scala
apps/scala-server/modules/core/src/main/scala/api/modules/: HttpApi.scala  Security.scala  Services.scala
apps/scala-server/modules/core/src/main/scala/api/optics/: isUUID.scala
apps/scala-server/modules/core/src/main/scala/api/resources/: AppResources.scala  MkHttpClient.scala  MkHttpServer.scala
apps/scala-server/modules/core/src/main/scala/api/retries/: Retriable.scala  Retry.scala
apps/scala-server/modules/core/src/main/scala/api/services/: Auth.scala  Categories.scala  HealthCheck.scala  Languages.scala  Users.scala
apps/scala-server/modules/core/src/main/scala/api/sql/: codecs.scala
apps/scala-server/modules/core/src/main/scala/retry/: Fibonacci.scala
apps/scala-server/modules/tests/src/it/scala/api/storage/: PostgresSuite.scala
apps/scala-server/modules/tests/src/it/scala/suite/: ResourceSuite.scala
apps/scala-server/modules/tests/src/main/scala/api/: Main.scala  generators.scala
apps/scala-server/project/: plugins.sbt
client/: package.json  packages.dhall  spago.dhall
client/src/: AppM.purs  Env.purs  Main.purs
client/src/Api/: Endpoint.purs  Request.purs  Utils.purs
client/src/App/: Button.purs
client/src/Capability/: LogMessages.purs  Navigate.purs  Now.purs
client/src/Capability/Resource/: Comment.purs  Snippet.purs  Tag.purs  User.purs
client/src/Component/: Router.purs  Utils.purs
client/src/Component/HOC/: Connect.purs
client/src/Component/HTML/: Footer.purs  Header.purs  SnippetList.purs  Utils.purs
client/src/Component/Part/: LikeButton.purs
client/src/Data/: Comment.purs  Email.purs  Log.purs  PaginatedArray.purs  PreciseDateTime.purs  Profile.purs  Route.purs  Snippet.purs  Username.purs
client/src/Page/: Home.purs
flame/: .gitignore  README.md  mix.exs
flame/config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
flame/lib/: flame.ex  flame_web.ex
flame/lib/flame/: application.ex  repo.ex
flame/lib/flame_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
flame/lib/flame_web/channels/: user_socket.ex
flame/lib/flame_web/controllers/: page_controller.ex
flame/lib/flame_web/templates/layout/: app.html.eex
flame/lib/flame_web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex
flame/priv/repo/: seeds.exs
flame/test/: test_helper.exs
flame/test/flame_web/controllers/: page_controller_test.exs
flame/test/flame_web/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
flame/test/support/: channel_case.ex  conn_case.ex  data_case.ex
guack/: ChangeLog.md  README.md  guack.cabal  package.yaml  stack.yaml
server/: .env.development  .eslintrc.json  docker-compose.yml  index.d.ts  jest.config.js  package.json  reqs.http  tsconfig.json
server/__test__/: global.test.ts  jest.setup.ts
server/sql/: 001_init.sql
server/src/: app.ts  index.ts
server/src/features/auth/: AuthRouter.ts  UserRepo.ts  authMiddleware.ts  authRoutes.ts  loginService.ts  registerService.ts  test.ts  user.ts
server/src/features/snippet/: db.test.ts  routes.test.ts  snippet.ts  snippetRepo.ts  snippetRouter.ts  snippetService.ts
server/src/infrastructure/: bcrypt.ts  config.ts  constants.ts  db.ts  env.ts  error.ts  logger.ts
(+13 files in other folders)
