cabal-version:       2.4
name:                affaj
version:             0.0.0.0
synopsis:            Three layer cake Haskell implementation
description:         Please see the README on Github at <https://github.com/japiirainen/affaj#readme>
homepage:            https://github.com/japiirainen/affaj#readme
bug-reports:         https://github.com/japiirainen/affaj/issues
author:              Japiirainen
maintainer:          Japiirainen <joona.piirainen@gmail.com>
copyright:           2018-2019 Japiirainen
license:             BSD-3-Clause
license-file:        LICENSE
build-type:          Custom
extra-doc-files:     README.md
                     ChangeLog.md
tested-with:         GHC == 8.6.5

source-repository head
  type:                git
  location:            https://github.com/japiirainen/snips.git

custom-setup
  setup-depends: Cabal
               , base
               , proto-lens-setup ^>= 0.4.0.2

common common-options
  build-depends:       base-noprelude ^>= 4.12.0.0
                     , relude ^>= 0.5.0

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       ConstraintKinds
                       DataKinds
                       DeriveGeneric
                       DerivingStrategies
                       DerivingVia
                       DeriveAnyClass
                       FlexibleContexts
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       MultiParamTypeClasses
                       OverloadedStrings
                       OverloadedLabels
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications
                       TypeFamilies
                       TypeOperators
library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Prelude
                       Lib
                         -- application monad
                         Lib.App
                           Lib.App.Env
                           Lib.App.Error
                           Lib.App.Monad

                         Lib.Config

                         -- core modules
                         Lib.Core.Admin
                         Lib.Core.Email
                         Lib.Core.Id
                         Lib.Core.Jwt
                         Lib.Core.Password
                         Lib.Core.Session
                         Lib.Core.User

                         Lib.Db
                           Lib.Db.Functions
                           Lib.Db.Schema
                           Lib.Db.User

                         -- effects
                         Lib.Effects.Jwt
                         Lib.Effects.Log
                         Lib.Effects.Measure
                         Lib.Effects.Session

                         -- Server
                         Lib.Server
                           Lib.Server.Auth
                           Lib.Server.Types

                         Lib.Time

  build-depends:       aeson >= 1.4
                     , bcrypt ^>= 0.0.11
                     , bytestring ^>= 0.10
                     , case-insensitive ^>= 1.2
                     , co-log ^>= 0.3.0
                     , containers >= 0.6
                     , ekg ^>= 0.4.0.15
                     , ekg-core ^>= 0.1.1.6
                     , elm-street
                     , http-api-data ^>= 0.4
                     , http-types ^>= 0.12
                     , jwt ^>= 0.9.0
                     , lens ^>= 4.17
                     , mtl ^>= 2.2.2
                     , postgresql-simple ^>= 0.6.1
                     , postgresql-simple-named ^>= 0.0.0.0
                     , proto-lens ^>= 0.5.0.0
                     , proto-lens-protoc ^>= 0.5.0.0
                     , proto-lens-runtime ^>= 0.5.0.0
                     , random ^>= 1.1
                     , resource-pool
                     , servant ^>= 0.16
                     , servant-proto-lens ^>= 0.1.0.3
                     , servant-server ^>= 0.16
                     , text
                     , time >= 1.8 && < 1.10
                     , tomland ^>= 1.0.0
                     , unordered-containers
                     , warp ^>= 3.2


executable affaj
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       affaj

test-suite affaj-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test

  main-is:             Spec.hs
  other-modules:       Test.Auth
                       Test.Assert
                       Test.Common
                       Test.Core.Jwt
                       Test.Core.Password

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       affaj
                     , bcrypt
                     , hedgehog
                     , ekg-core
                     , hspec
                     , mtl
                     , hedgehog ^>= 0.6.1
                     , hspec
                     , hspec-core
                     , resource-pool
                     , unordered-containers
